k8s-resources/minio/400-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: rockergaming
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: disktype
      #               operator: In
      #               values:
      #                 - hdd
      containers:
        - name: minio
          image: minio/minio:RELEASE.2022-07-29T19-40-48Z
          args: ['server', '/data', '--console-address', ':9001']
          ports:
            - name: minio
              containerPort: 9000
            - name: minio-console
              containerPort: 9001
          volumeMounts:
            - name: s3-pv-storage
              mountPath: /data
      volumes:
        - name: s3-pv-storage
          persistentVolumeClaim:
            claimName: s3-nfs
